# agate-excel

./: .travis.yml  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  README.rst  example.py  pyproject.toml  requirements-py2.txt  requirements-py3.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  lint.yml
agateexcel/: __init__.py  table.py  table_xls.py  table_xlsx.py  tableset_xls.py  tableset_xlsx.py
docs/: Makefile  conf.py  index.rst
examples/: covid_19-iss.xlsx  test.xls  test.xlsx  test_ambiguous_date.xls  test_ambiguous_date.xlsx  test_empty.xls  test_empty.xlsx  test_numeric_column_name.xls  test_numeric_column_name.xlsx  test_sheets.xls  test_sheets.xlsx  test_skip_lines.xls  test_skip_lines.xlsx  test_zeros.xls
tests/: test_table.py  test_table_xls.py  test_table_xlsx.py  test_tableset_xls.py  test_tableset_xlsx.py
